Fix spacing in .party-header on splash

--- a/assets/stylesheets/splash.css.scss
+++ b/assets/stylesheets/splash.css.scss
@@ -102,33 +102,37 @@ h1 a {
   .party-container {
     -webkit-flex-grow: 1;
     flex-grow: 1;
+  }
 
-    .party-header {
+  .party-header {
+    display: -webkit-flex;
+    display: flex;
+    -webkit-flex-direction: column;
+    flex-direction: column;
+
+    width: 5rem;
+
+    img {
+      padding-bottom: .5rem;
+    }
+
+    .n-pledged-delegates {
       display: -webkit-flex;
       display: flex;
       -webkit-flex-direction: column;
       flex-direction: column;
+      -webkit-justify-content: flex-end;
+      justify-content: flex-end;
+      flex-grow: 1;
+    }
 
-      width: 5rem;
+    p {
+      margin: 0;
+    }
 
-      .n-pledged-delegates {
-        display: -webkit-flex;
-        display: flex;
-        -webkit-flex-direction: column;
-        flex-direction: column;
-        -webkit-justify-content: flex-end;
-        justify-content: flex-end;
-        flex-grow: 1;
-      }
-
-      p {
-        margin: 0;
-      }
-
-      h3 { // more specificity
-        text-align: center;
-        white-space: normal;
-      }
+    h3 { // more specificity
+      text-align: center;
+      white-space: normal;
     }
   }
 
@@ -409,6 +413,7 @@ h1 a {
 	padding: 10px;
   text-align: center;
   color: white;
+  line-height: 1.4;
 
   h3, h4 {
     font: inherit;
